[gd_scene load_steps=14 format=3 uid="uid://bwp0ji1quvpcl"]

[ext_resource type="Script" path="res://scenes/main-menu/main-menu.gd" id="1_ndtva"]
[ext_resource type="Texture2D" uid="uid://brp3opb1hhprp" path="res://assets/textures/Kenney/2D assets/Game Icons/PNG/Black/1x/home.png" id="3_u045q"]
[ext_resource type="Texture2D" uid="uid://bi2n1smhemm8v" path="res://assets/textures/Kenney/2D assets/Game Icons/PNG/Black/1x/forward.png" id="4_77htl"]
[ext_resource type="Texture2D" uid="uid://ckhl58f4pd31i" path="res://assets/textures/Kenney/2D assets/Game Icons/PNG/Black/1x/singleplayer.png" id="5_wdvw3"]
[ext_resource type="Texture2D" uid="uid://c57rp55y83st2" path="res://assets/textures/Kenney/2D assets/Game Icons/PNG/Black/1x/share2.png" id="6_5bs5d"]
[ext_resource type="Texture2D" uid="uid://got1b5n0b804" path="res://assets/textures/Kenney/2D assets/Game Icons/PNG/Black/1x/menuGrid.png" id="7_0q3yi"]
[ext_resource type="Texture2D" uid="uid://cfqwnjdcqhot" path="res://icon-0.svg" id="8_ui0o6"]
[ext_resource type="Texture2D" uid="uid://cjxi038gpj75x" path="res://assets/textures/Kenney/2D assets/Game Icons/PNG/Black/1x/cart.png" id="9_wbk0t"]
[ext_resource type="Texture2D" uid="uid://dtgjf2rh7w1hw" path="res://assets/textures/Kenney/2D assets/Game Icons/PNG/Black/1x/warning.png" id="10_85gxt"]
[ext_resource type="Texture2D" uid="uid://bqrj1gqvnhc5i" path="res://assets/textures/sandbox-01.png" id="11_vkj2s"]
[ext_resource type="Texture2D" uid="uid://wckfhobyc1ds" path="res://assets/textures/Kenney/2D assets/Game Icons/PNG/Black/2x/multiplayer.png" id="11_xu7fi"]
[ext_resource type="Texture2D" uid="uid://do5jvw2dhvwr2" path="res://assets/textures/godot-block-01.png" id="12_5f464"]
[ext_resource type="Texture2D" uid="uid://bnwsa4lan6t5s" path="res://assets/textures/placehold.co-286x160.png" id="12_ftaka"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ndtva")

[node name="BackgroundColor" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.945098, 0.956863, 0.960784, 1)

[node name="LeftNav" type="Control" parent="."]
anchors_preset = 0
offset_right = 42.0
offset_bottom = 720.0

[node name="BackgroundColor" type="ColorRect" parent="LeftNav"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HomeButton" type="TextureButton" parent="LeftNav"]
layout_mode = 0
offset_top = 12.0
offset_right = 42.0
offset_bottom = 54.0
ignore_texture_size = true
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="LeftNav/HomeButton"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -12.0
offset_top = -36.0
offset_right = 12.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("3_u045q")
expand_mode = 1
stretch_mode = 5

[node name="RichTextLabel" type="RichTextLabel" parent="LeftNav/HomeButton"]
layout_mode = 0
offset_top = 30.0
offset_right = 42.0
offset_bottom = 42.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 8
bbcode_enabled = true
text = "[center]Home[/center]"
scroll_active = false
autowrap_mode = 0

[node name="DiscoverButton" type="TextureButton" parent="LeftNav"]
layout_mode = 0
offset_top = 58.0
offset_right = 42.0
offset_bottom = 100.0
ignore_texture_size = true
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="LeftNav/DiscoverButton"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -12.0
offset_top = -36.0
offset_right = 12.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("4_77htl")
expand_mode = 1
stretch_mode = 5

[node name="RichTextLabel" type="RichTextLabel" parent="LeftNav/DiscoverButton"]
layout_mode = 0
offset_top = 30.0
offset_right = 42.0
offset_bottom = 42.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 8
bbcode_enabled = true
text = "[center]Discover[/center]"
scroll_active = false
autowrap_mode = 0

[node name="AvatarButton" type="TextureButton" parent="LeftNav"]
layout_mode = 0
offset_top = 102.0
offset_right = 42.0
offset_bottom = 144.0
ignore_texture_size = true
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="LeftNav/AvatarButton"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -12.0
offset_top = -36.0
offset_right = 12.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("5_wdvw3")
expand_mode = 1
stretch_mode = 5

[node name="RichTextLabel" type="RichTextLabel" parent="LeftNav/AvatarButton"]
layout_mode = 0
offset_top = 30.0
offset_right = 42.0
offset_bottom = 42.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 8
bbcode_enabled = true
text = "[center]Avatar[/center]"
scroll_active = false
autowrap_mode = 0

[node name="ConnectButton" type="TextureButton" parent="LeftNav"]
layout_mode = 0
offset_top = 146.0
offset_right = 42.0
offset_bottom = 188.0
ignore_texture_size = true
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="LeftNav/ConnectButton"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -12.0
offset_top = -36.0
offset_right = 12.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("6_5bs5d")
expand_mode = 1
stretch_mode = 5

[node name="RichTextLabel" type="RichTextLabel" parent="LeftNav/ConnectButton"]
layout_mode = 0
offset_top = 30.0
offset_right = 42.0
offset_bottom = 42.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 8
bbcode_enabled = true
text = "[center]Connect[/center]"
scroll_active = false
autowrap_mode = 0

[node name="MoreButton" type="TextureButton" parent="LeftNav"]
layout_mode = 0
offset_top = 190.0
offset_right = 42.0
offset_bottom = 232.0
ignore_texture_size = true
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="LeftNav/MoreButton"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -12.0
offset_top = -36.0
offset_right = 12.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("7_0q3yi")
expand_mode = 1
stretch_mode = 5

[node name="RichTextLabel" type="RichTextLabel" parent="LeftNav/MoreButton"]
layout_mode = 0
offset_top = 30.0
offset_right = 42.0
offset_bottom = 42.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 8
bbcode_enabled = true
text = "[center]More[/center]"
scroll_active = false
autowrap_mode = 0

[node name="GodotEngineButton" type="TextureButton" parent="LeftNav"]
layout_mode = 0
offset_top = 620.0
offset_right = 42.0
offset_bottom = 662.0
ignore_texture_size = true
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="LeftNav/GodotEngineButton"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -12.0
offset_top = -33.0
offset_right = 12.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("8_ui0o6")
expand_mode = 1
stretch_mode = 5

[node name="Main" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 42.0
offset_right = 1280.0
offset_bottom = 720.0

[node name="BackgroundColor" type="ColorRect" parent="Main"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.945098, 0.956863, 0.960784, 1)

[node name="LineEdit" type="LineEdit" parent="Main"]
layout_mode = 0
offset_left = 486.0
offset_top = 4.0
offset_right = 754.0
offset_bottom = 35.0
theme_override_colors/font_placeholder_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 14
placeholder_text = "üîç Search"

[node name="AvatarButton" type="TextureButton" parent="Main"]
layout_mode = 0
offset_left = 1052.0
offset_right = 1088.0
offset_bottom = 36.0
ignore_texture_size = true
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="Main/AvatarButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -18.0
offset_top = -18.0
offset_right = 18.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_wdvw3")
expand_mode = 1
stretch_mode = 5

[node name="Username" type="RichTextLabel" parent="Main"]
layout_mode = 0
offset_left = 1088.0
offset_top = 9.0
offset_right = 1152.0
offset_bottom = 29.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "username"
scroll_active = false
autowrap_mode = 0

[node name="CurrencyButton" type="TextureButton" parent="Main"]
layout_mode = 0
offset_left = 1152.0
offset_right = 1188.0
offset_bottom = 36.0
ignore_texture_size = true
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="Main/CurrencyButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -18.0
offset_top = -18.0
offset_right = 18.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_wbk0t")
expand_mode = 1
stretch_mode = 5

[node name="NotificationsButton" type="TextureButton" parent="Main"]
layout_mode = 0
offset_left = 1188.0
offset_right = 1224.0
offset_bottom = 36.0
ignore_texture_size = true
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="Main/NotificationsButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -18.0
offset_top = -18.0
offset_right = 18.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10_85gxt")
expand_mode = 1
stretch_mode = 5

[node name="HomeHeading" type="RichTextLabel" parent="Main"]
layout_mode = 0
offset_left = 24.0
offset_top = 4.0
offset_right = 84.0
offset_bottom = 34.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 18
bbcode_enabled = true
text = "Home"
scroll_active = false
autowrap_mode = 0

[node name="FriendsHeading" type="RichTextLabel" parent="Main"]
layout_mode = 0
offset_left = 24.0
offset_top = 36.0
offset_right = 84.0
offset_bottom = 56.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 14
bbcode_enabled = true
text = "Friends"
scroll_active = false
autowrap_mode = 0

[node name="AddFriendsButton" type="TextureButton" parent="Main"]
layout_mode = 0
offset_left = 23.0
offset_top = 63.0
offset_right = 103.0
offset_bottom = 159.0

[node name="TextureRect" type="TextureRect" parent="Main/AddFriendsButton"]
layout_mode = 0
offset_right = 80.0
offset_bottom = 80.0
texture = ExtResource("11_xu7fi")
expand_mode = 1

[node name="RichTextLabel" type="RichTextLabel" parent="Main/AddFriendsButton"]
layout_mode = 0
offset_top = 80.0
offset_right = 80.0
offset_bottom = 96.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 10
bbcode_enabled = true
text = "[center]Add Friends[/center]"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Picks" type="Control" parent="Main"]
anchors_preset = 0
offset_left = 24.0
offset_top = 182.0
offset_right = 1204.0
offset_bottom = 450.0

[node name="Heading" type="RichTextLabel" parent="Main/Picks"]
layout_mode = 0
offset_right = 286.0
offset_bottom = 20.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 14
bbcode_enabled = true
text = "Today's Picks"
scroll_active = false
autowrap_mode = 0

[node name="Paragraph" type="RichTextLabel" parent="Main/Picks"]
layout_mode = 0
offset_top = 24.0
offset_right = 286.0
offset_bottom = 44.0
theme_override_colors/default_color = Color(0.501406, 0.501407, 0.501405, 1)
theme_override_font_sizes/normal_font_size = 8
bbcode_enabled = true
text = "A curated selection of daily highlights"
fit_content = true
autowrap_mode = 0

[node name="Pick1" type="Control" parent="Main/Picks"]
anchors_preset = 0
offset_top = 44.0
offset_right = 286.0
offset_bottom = 268.0

[node name="Pick1Button" type="TextureButton" parent="Main/Picks/Pick1"]
layout_mode = 0
offset_top = 4.0
offset_right = 286.0
offset_bottom = 164.0

[node name="Thumbnail" type="TextureRect" parent="Main/Picks/Pick1/Pick1Button"]
layout_mode = 0
texture = ExtResource("11_vkj2s")

[node name="Title" type="RichTextLabel" parent="Main/Picks/Pick1"]
layout_mode = 0
offset_top = 168.0
offset_right = 286.0
offset_bottom = 188.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 12
text = "Godot 4.3 Sandbox 3D"
fit_content = true
scroll_active = false
scroll_following = true
autowrap_mode = 0

[node name="Description" type="RichTextLabel" parent="Main/Picks/Pick1"]
layout_mode = 0
offset_top = 184.0
offset_right = 286.0
offset_bottom = 224.0
theme_override_colors/default_color = Color(0.501406, 0.501407, 0.501405, 1)
theme_override_font_sizes/normal_font_size = 10
text = "Used to test different player mechaincs."
scroll_active = false
scroll_following = true
autowrap_mode = 2

[node name="Pick2" type="Control" parent="Main/Picks"]
anchors_preset = 0
offset_left = 304.0
offset_top = 44.0
offset_right = 590.0
offset_bottom = 268.0

[node name="Pick2Button" type="TextureButton" parent="Main/Picks/Pick2"]
layout_mode = 0
offset_top = 4.0
offset_right = 286.0
offset_bottom = 164.0

[node name="Thumbnail" type="TextureRect" parent="Main/Picks/Pick2/Pick2Button"]
layout_mode = 0
texture = ExtResource("12_5f464")

[node name="Title" type="RichTextLabel" parent="Main/Picks/Pick2"]
layout_mode = 0
offset_top = 168.0
offset_right = 286.0
offset_bottom = 188.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 12
text = "Godot Craft"
fit_content = true
scroll_active = false
scroll_following = true
autowrap_mode = 0

[node name="Description" type="RichTextLabel" parent="Main/Picks/Pick2"]
layout_mode = 0
offset_top = 184.0
offset_right = 286.0
offset_bottom = 224.0
theme_override_colors/default_color = Color(0.501406, 0.501407, 0.501405, 1)
theme_override_font_sizes/normal_font_size = 10
text = "Build and craft using block shapes."
scroll_active = false
scroll_following = true
autowrap_mode = 2

[node name="Pick3" type="Control" parent="Main/Picks"]
anchors_preset = 0
offset_left = 608.0
offset_top = 44.0
offset_right = 894.0
offset_bottom = 268.0

[node name="Pick3Button" type="TextureButton" parent="Main/Picks/Pick3"]
layout_mode = 0
offset_top = 4.0
offset_right = 286.0
offset_bottom = 164.0

[node name="Thumbnail" type="TextureRect" parent="Main/Picks/Pick3/Pick3Button"]
layout_mode = 0
texture = ExtResource("12_ftaka")

[node name="Title" type="RichTextLabel" parent="Main/Picks/Pick3"]
layout_mode = 0
offset_top = 168.0
offset_right = 286.0
offset_bottom = 188.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 12
text = "Example 3"
fit_content = true
scroll_active = false
scroll_following = true
autowrap_mode = 0

[node name="Description" type="RichTextLabel" parent="Main/Picks/Pick3"]
layout_mode = 0
offset_top = 184.0
offset_right = 286.0
offset_bottom = 224.0
theme_override_colors/default_color = Color(0.501406, 0.501407, 0.501405, 1)
theme_override_font_sizes/normal_font_size = 10
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean non bibendum nulla. "
scroll_active = false
scroll_following = true
autowrap_mode = 2

[node name="Pick4" type="Control" parent="Main/Picks"]
anchors_preset = 0
offset_left = 912.0
offset_top = 44.0
offset_right = 1198.0
offset_bottom = 268.0

[node name="Pick4Button" type="TextureButton" parent="Main/Picks/Pick4"]
layout_mode = 0
offset_top = 4.0
offset_right = 286.0
offset_bottom = 164.0

[node name="Thumbnail" type="TextureRect" parent="Main/Picks/Pick4/Pick4Button"]
layout_mode = 0
texture = ExtResource("12_ftaka")

[node name="Title" type="RichTextLabel" parent="Main/Picks/Pick4"]
layout_mode = 0
offset_top = 168.0
offset_right = 286.0
offset_bottom = 188.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 12
text = "Example 4"
fit_content = true
scroll_active = false
scroll_following = true
autowrap_mode = 0

[node name="Description" type="RichTextLabel" parent="Main/Picks/Pick4"]
layout_mode = 0
offset_top = 184.0
offset_right = 286.0
offset_bottom = 224.0
theme_override_colors/default_color = Color(0.501406, 0.501407, 0.501405, 1)
theme_override_font_sizes/normal_font_size = 10
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean non bibendum nulla. "
scroll_active = false
scroll_following = true
autowrap_mode = 2

[node name="Recommend" type="Control" parent="Main"]
anchors_preset = 0
offset_left = 24.0
offset_top = 446.0
offset_right = 1204.0
offset_bottom = 714.0

[node name="Heading" type="RichTextLabel" parent="Main/Recommend"]
layout_mode = 0
offset_right = 286.0
offset_bottom = 20.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 14
bbcode_enabled = true
text = "Recommended For You"
scroll_active = false
autowrap_mode = 0

[node name="Recommend1" type="Control" parent="Main/Recommend"]
anchors_preset = 0
offset_left = -1.0
offset_top = 25.0
offset_right = 285.0
offset_bottom = 249.0

[node name="Recommend1Button" type="TextureButton" parent="Main/Recommend/Recommend1"]
layout_mode = 0
offset_top = 4.0
offset_right = 286.0
offset_bottom = 164.0

[node name="Thumbnail" type="TextureRect" parent="Main/Recommend/Recommend1/Recommend1Button"]
layout_mode = 0
texture = ExtResource("12_ftaka")

[node name="Title" type="RichTextLabel" parent="Main/Recommend/Recommend1"]
layout_mode = 0
offset_top = 168.0
offset_right = 97.0
offset_bottom = 188.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 12
text = "Example 1"
fit_content = true
scroll_active = false
scroll_following = true
autowrap_mode = 0

[node name="Description" type="RichTextLabel" parent="Main/Recommend/Recommend1"]
layout_mode = 0
offset_top = 184.0
offset_right = 286.0
offset_bottom = 224.0
theme_override_colors/default_color = Color(0.501406, 0.501407, 0.501405, 1)
theme_override_font_sizes/normal_font_size = 10
text = "üëç96% Rating"
scroll_active = false
scroll_following = true
autowrap_mode = 2

[node name="Recommend2" type="Control" parent="Main/Recommend"]
anchors_preset = 0
offset_left = 303.0
offset_top = 25.0
offset_right = 589.0
offset_bottom = 249.0

[node name="Recommend2Button" type="TextureButton" parent="Main/Recommend/Recommend2"]
layout_mode = 0
offset_top = 4.0
offset_right = 286.0
offset_bottom = 164.0

[node name="Thumbnail" type="TextureRect" parent="Main/Recommend/Recommend2/Recommend2Button"]
layout_mode = 0
texture = ExtResource("12_ftaka")

[node name="Title" type="RichTextLabel" parent="Main/Recommend/Recommend2"]
layout_mode = 0
offset_top = 168.0
offset_right = 97.0
offset_bottom = 188.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 12
text = "Example 2"
fit_content = true
scroll_active = false
scroll_following = true
autowrap_mode = 0

[node name="Description" type="RichTextLabel" parent="Main/Recommend/Recommend2"]
layout_mode = 0
offset_top = 184.0
offset_right = 286.0
offset_bottom = 224.0
theme_override_colors/default_color = Color(0.501406, 0.501407, 0.501405, 1)
theme_override_font_sizes/normal_font_size = 10
text = "üëç96% Rating"
scroll_active = false
scroll_following = true
autowrap_mode = 2

[node name="Recommend3" type="Control" parent="Main/Recommend"]
anchors_preset = 0
offset_left = 607.0
offset_top = 25.0
offset_right = 893.0
offset_bottom = 249.0

[node name="Recommend3Button" type="TextureButton" parent="Main/Recommend/Recommend3"]
layout_mode = 0
offset_top = 4.0
offset_right = 286.0
offset_bottom = 164.0

[node name="Thumbnail" type="TextureRect" parent="Main/Recommend/Recommend3/Recommend3Button"]
layout_mode = 0
texture = ExtResource("12_ftaka")

[node name="Title" type="RichTextLabel" parent="Main/Recommend/Recommend3"]
layout_mode = 0
offset_top = 168.0
offset_right = 97.0
offset_bottom = 188.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 12
text = "Example 3"
fit_content = true
scroll_active = false
scroll_following = true
autowrap_mode = 0

[node name="Description" type="RichTextLabel" parent="Main/Recommend/Recommend3"]
layout_mode = 0
offset_top = 184.0
offset_right = 286.0
offset_bottom = 224.0
theme_override_colors/default_color = Color(0.501406, 0.501407, 0.501405, 1)
theme_override_font_sizes/normal_font_size = 10
text = "üëç96% Rating"
scroll_active = false
scroll_following = true
autowrap_mode = 2

[node name="Recommend4" type="Control" parent="Main/Recommend"]
anchors_preset = 0
offset_left = 911.0
offset_top = 25.0
offset_right = 1197.0
offset_bottom = 249.0

[node name="Recommend4Button" type="TextureButton" parent="Main/Recommend/Recommend4"]
layout_mode = 0
offset_top = 4.0
offset_right = 286.0
offset_bottom = 164.0

[node name="Thumbnail" type="TextureRect" parent="Main/Recommend/Recommend4/Recommend4Button"]
layout_mode = 0
texture = ExtResource("12_ftaka")

[node name="Title" type="RichTextLabel" parent="Main/Recommend/Recommend4"]
layout_mode = 0
offset_top = 168.0
offset_right = 97.0
offset_bottom = 188.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 12
text = "Example 4"
fit_content = true
scroll_active = false
scroll_following = true
autowrap_mode = 0

[node name="Description" type="RichTextLabel" parent="Main/Recommend/Recommend4"]
layout_mode = 0
offset_top = 184.0
offset_right = 286.0
offset_bottom = 224.0
theme_override_colors/default_color = Color(0.501406, 0.501407, 0.501405, 1)
theme_override_font_sizes/normal_font_size = 10
text = "üëç96% Rating"
scroll_active = false
scroll_following = true
autowrap_mode = 2

[connection signal="pressed" from="LeftNav/GodotEngineButton" to="." method="_on_godot_engine_button_pressed"]
[connection signal="pressed" from="Main/Picks/Pick1/Pick1Button" to="." method="_on_pick_1_button_pressed"]
[connection signal="pressed" from="Main/Picks/Pick2/Pick2Button" to="." method="_on_pick_2_button_pressed"]
